--- a/index.html
+++ b/index.html
@@ -8,12 +8,50 @@
         <!-- Bootstrap CSS -->
         <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh' crossorigin='anonymous'>
 
-        <script type="text/javascript" src="/public/js/paper.js"></script>
+        <script type="text/javascript" src="/node_modules/paper/dist/paper-full.js"></script>
         <script type="text/paperscript" src="/public/js/main.js" canvas="myCanvas"></script>
         <link rel="stylesheet" href="/public/stylesheet/main.css">
         <title>PaperScript Fun</title>
     </head>
         <body>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <a class="navbar-brand" href="#">Shapes</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Square</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Circle</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Star</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Rectangle</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#">Disabled</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <a class="navbar-brand" href="#">Colors</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Red</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blue</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Yellow</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
             <canvas id='myCanvas' resize></canvas>
 
 
@@ -26,6 +64,5 @@
             <script src='https://code.jquery.com/jquery-3.4.1.slim.min.js' integrity='sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n' crossorigin='anonymous'></script>
             <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous'></script>
             <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6' crossorigin='anonymous'></script>
-            <script type="text/javascript" src="js/paper.js"></script>
         </body>
     </html>
