--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- paper.js -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.2/paper-full.min.js"></script>
 
-        <title>PaperScript Fun</title>
+        <title>shapes</title>
     </head>
         <body>
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -69,8 +69,8 @@
 
             
             <!-- My scripts -->
-            <script type="text/paperscript" src="/public/js/paper.js" canvas="myCanvas"></script>
-            <script type="text/javascript" src="/public/js/main.js"></script>
-            <script type="text/javascript" src="/public/js/colorPicker.js"></script>
+            <script type="text/paperscript" src="public/js/paper.js" canvas="myCanvas"></script>
+            <script type="text/javascript" src="public/js/main.js"></script>
+            <script type="text/javascript" src="public/js/colorPicker.js"></script>
         </body>
     </html>
