remove public from path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css"/>
         link
         <!-- My stylesheets -->
-        <link rel="stylesheet" href="/public/stylesheet/main.css">
+        <link rel="stylesheet" href="stylesheet/main.css">
 
         <!-- Scripts -->
         <!-- jQuery -->
@@ -69,8 +69,8 @@
 
             
             <!-- My scripts -->
-            <script type="text/paperscript" src="public/js/paper.js" canvas="myCanvas"></script>
-            <script type="text/javascript" src="public/js/main.js"></script>
-            <script type="text/javascript" src="public/js/colorPicker.js"></script>
+            <script type="text/paperscript" src="js/paper.js" canvas="myCanvas"></script>
+            <script type="text/javascript" src="js/main.js"></script>
+            <script type="text/javascript" src="js/colorPicker.js"></script>
         </body>
     </html>
