--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap4 -->
         <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh' crossorigin='anonymous'>
         <!-- pickr/classic -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css"/>
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css"/> -->
         link
         <!-- My stylesheets -->
         <link rel="stylesheet" href="assets/stylesheet/main.css">
@@ -22,9 +22,9 @@
         <!-- Bootstrap4 -->
         <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js' integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6' crossorigin='anonymous'></script>
         <!-- pickr -->
-        <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script> -->
         <!-- paper.js -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.2/paper-full.min.js"></script>
+        <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.2/paper-full.min.js"></script> -->
 
         <title>shapes</title>
     </head>
@@ -58,19 +58,19 @@
                         <div class="navbar-brand">Color</div>
                         <li class="nav-item">
                             <div class="mt-1">
-                                <div class="color-picker"></div>
+                                <!-- <div class="color-picker"></div> -->
                             </div> 
                         </li>                        
                     </ul>
                 </div>                
             </nav>
             
-            <canvas id='myCanvas' resize></canvas>
+            <!-- <canvas id='myCanvas' resize></canvas> -->
 
             
             <!-- My scripts -->
-            <script type="text/paperscript" src="assets/js/paper.js" canvas="myCanvas"></script>
-            <script type="text/javascript" src="assets/js/main.js"></script>
-            <script type="text/javascript" src="assets/js/colorPicker.js"></script>
+            <!-- <script type="text/paperscript" src="assets/js/paper.js" canvas="myCanvas"></script> -->
+            <!-- <script type="text/javascript" src="assets/js/main.js"></script> -->
+            <!-- <script type="text/javascript" src="assets/js/colorPicker.js"></script> -->
         </body>
     </html>
